--- a/src/main/webapp/content/scss/_bootstrap-variables.scss
+++ b/src/main/webapp/content/scss/_bootstrap-variables.scss
@@ -13,7 +13,7 @@ $success: #28a745;
 $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
-$bg-dark: red;
+$dark: red;
 
 // Options:
 // Quickly modify global styling by enabling or disabling optional features.
